# ophyd-registry

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/ophydregistry/: __init__.py  _typing.py  exceptions.py  registry.py
src/ophydregistry/tests/: test_instrument_registry.py
